Added support for https if needed.

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,10 @@ http {
         listen 80;
 
         location = /turmpet {
-            return 308 $request_uri/;
+            if ($http_x_scheme = "") {
+                set $http_x_scheme $scheme;
+            }
+            return 308 $http_x_scheme://$host$uri/;
         }
 
         location /turmpet/ {
